--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "X100",
-  "short_name": "X100",
-  "description": "Next.js Theme Photography portfolio",
+  "name": "Francesc Jimenez",
+  "short_name": "Francesc Jimenez",
+  "description": "Francesc Jimenez photography portfolio",
   "start_url": "/"
   
 }
