--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "x100-nextjs-theme",
+  "name": "francescjimenez.com",
   "version": "1.0.0",
   "private": true,
-  "author": "Travis Lord <hi@travislord.au>",
+  "author": "Francesc Jimenez <hi@francescjimenez.com>",
   "scripts": {
     "validate-images": "ts-node scripts/validate-images.ts",
-    "dev": "yarn validate-images --dry-run && next dev",
-    "build": "yarn validate-images --dry-run && next build",
+    "dev": "npm run validate-images --dry-run && next dev",
+    "build": "npm run validate-images --dry-run && next build",
     "start": "next start",
     "lint": "next lint",
     "predev": "ts-node scripts/validate-images.ts",
     "prebuild": "ts-node scripts/validate-images.ts"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "latest",
-    "@formspree/react": "^3.0.0",
+    "@emotion/is-prop-valid": "1.4.0",
+    "@formspree/react": "3.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -72,11 +72,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "postcss": "8.5.6",
     "tailwindcss": "^3.4.17",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "10.9.2",
+    "typescript": "5.9.2"
   }
 }
